--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "three": "^0.137.5"
   }
 }
