--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "server for dontcollapse",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "start": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,11 @@
   },
   "homepage": "https://github.com/Zephyr-Quest/DontCollapse#readme",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
+    "express-socket.io-session": "^1.3.5",
+    "express-validator": "^6.14.0",
     "socket.io": "^4.4.1"
   }
 }
