--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "server for dontcollapse",
   "main": "index.js",
   "scripts": {
-  "start": "nodemon"
+    "start": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -21,10 +21,12 @@
   "homepage": "https://github.com/Zephyr-Quest/DontCollapse#readme",
   "dependencies": {
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "express-socket.io-session": "^1.3.5",
     "express-validator": "^6.14.0",
+    "path": "^0.12.7",
     "socket.io": "^4.4.1"
   }
 }
