--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "path": "^0.12.7",
-    "three": "^0.137.5"
+    "three": "^0.137.5",
+    "three.interaction": "^0.2.3"
   }
 }
