--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "express-validator": "^6.14.0",
     "path": "^0.12.7",
     "socket.io": "^4.4.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.14.0",
+    "eslint-config-google": "^0.14.0"
   }
 }
